--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "ionic:build": "npm run build",
+    "ionic:serve": "npm run start"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^15.2.0",
+    "@angular/cdk": "^15.0.0",
     "@angular/common": "^15.2.0",
     "@angular/compiler": "^15.2.0",
     "@angular/core": "^15.2.0",
@@ -18,6 +21,17 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@capacitor/android": "5.0.5",
+    "@capacitor/app": "5.0.3",
+    "@capacitor/cli": "5.0.5",
+    "@capacitor/core": "5.0.5",
+    "@capacitor/haptics": "5.0.4",
+    "@capacitor/ios": "5.0.5",
+    "@capacitor/keyboard": "5.0.4",
+    "@capacitor/status-bar": "5.0.4",
+    "@nebular/eva-icons": "11.0.0",
+    "@nebular/theme": "^11.0.0",
+    "eva-icons": "^1.1.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
@@ -26,6 +40,7 @@
     "@angular-devkit/build-angular": "^15.2.8",
     "@angular/cli": "~15.2.8",
     "@angular/compiler-cli": "^15.2.0",
+    "@schematics/angular": "~15.2.8",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
