--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@capacitor/ios": "5.0.5",
     "@capacitor/keyboard": "5.0.4",
     "@capacitor/status-bar": "5.0.4",
-    "@nebular/eva-icons": "11.0.0",
+    "@nebular/eva-icons": "^11.0.0",
     "@nebular/theme": "^11.0.0",
     "eva-icons": "^1.1.3",
     "rxjs": "~7.8.0",
@@ -38,7 +38,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.2.8",
-    "@angular/cli": "~15.2.8",
+    "@angular/cli": "16.1.0",
     "@angular/compiler-cli": "^15.2.0",
     "@schematics/angular": "~15.2.8",
     "@types/jasmine": "~4.3.0",
