--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^15.2.0",
-    "@angular/cdk": "^15.0.0",
+    "@angular/cdk": "^15.2.0",
     "@angular/common": "^15.2.0",
     "@angular/compiler": "^15.2.0",
     "@angular/core": "^15.2.0",
@@ -42,7 +42,7 @@
     "@angular/cli": "16.1.0",
     "@angular/compiler-cli": "^15.2.0",
     "@schematics/angular": "~15.2.8",
-    "@types/jasmine": "~4.3.0",
+    "@types/jasmine": "4.3.4",
     "jasmine-core": "4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "3.2.0",
