--- a/ios/App/App/capacitor.config.json
+++ b/ios/App/App/capacitor.config.json
@@ -1,8 +1,13 @@
 {
-  "appId": "web.lottired.pos",
-  "appName": "web-lottired-pos",
-  "webDir": "dist",
-  "server": {
-    "androidScheme": "https"
-  }
+	"appId": "web.lottired.pos",
+	"appName": "web-lottired-pos",
+	"webDir": "dist",
+	"plugins": {
+		"CapacitorHttp": {
+			"enabled": true
+		}
+	},
+	"server": {
+		"androidScheme": "https"
+	}
 }
