--- a/package.json
+++ b/package.json
@@ -21,32 +21,32 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
-    "@capacitor/android": "5.0.5",
-    "@capacitor/app": "5.0.3",
-    "@capacitor/cli": "5.0.5",
-    "@capacitor/core": "5.0.5",
-    "@capacitor/haptics": "5.0.4",
-    "@capacitor/ios": "5.0.5",
-    "@capacitor/keyboard": "5.0.4",
-    "@capacitor/status-bar": "5.0.4",
+    "@capacitor/android": "5.1.1",
+    "@capacitor/app": "5.0.5",
+    "@capacitor/cli": "5.1.1",
+    "@capacitor/core": "5.1.1",
+    "@capacitor/haptics": "5.0.5",
+    "@capacitor/ios": "5.1.1",
+    "@capacitor/keyboard": "5.0.5",
+    "@capacitor/status-bar": "5.0.5",
     "@nebular/auth": "^11.0.0",
     "@nebular/eva-icons": "^11.0.0",
     "@nebular/theme": "^11.0.0",
     "eva-icons": "^1.1.3",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
+    "tslib": "2.6.0",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.2.8",
-    "@angular/cli": "16.1.0",
+    "@angular-devkit/build-angular": "15.2.9",
+    "@angular/cli": "16.1.3",
     "@angular/compiler-cli": "^15.2.0",
-    "@schematics/angular": "~15.2.8",
-    "@types/jasmine": "4.3.4",
+    "@schematics/angular": "15.2.9",
+    "@types/jasmine": "4.3.5",
     "jasmine-core": "4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "3.2.0",
-    "karma-coverage": "~2.2.0",
+    "karma-coverage": "2.2.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "2.1.0",
     "typescript": "~4.9.4"
